--- a/client/src/componentes/Cards/breedDetail.css
+++ b/client/src/componentes/Cards/breedDetail.css
@@ -11,7 +11,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: rgba(177, 95, 19, 0.425);
+  /* background-color: rgba(177, 95, 19, 0.425); */
+  background-color: rgba(52, 73, 94, 0.725);
   padding: 5px;
   margin: 0% 10% 0% 10%;
   width: 80%;
@@ -28,6 +29,9 @@
 }
 
 #breed-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   font-family: fantasy;
   font-size: 28px;
   color: rgb(129, 2, 2);
@@ -40,7 +44,7 @@
   align-items: center;
   width: 100%;
   height: 80%;
-  margin: 10px;
+  margin: 5% 0px 0px 0px;
 }
 
 #breed-image {
@@ -49,9 +53,9 @@
   border-radius: 15%;
 }
 
-/* .left-side {
+.left-side {
   display: flex;
-  border: 2px solid rgb(196, 168, 14);
+  /* border: 2px solid rgb(196, 168, 14); */
   width: 100%;
   height: 100%;
   border-radius: 20px;
@@ -59,7 +63,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-} */
+}
 
 .rigth-side {
   display: flex;
@@ -71,7 +75,8 @@
   border-radius: 30px;
   width: 100%;
   height: 100%;
-  margin: 25px;
+  margin-left: 70px;
+  margin-right: 10px;
 }
 
 .details-box {
