--- a/client/src/componentes/Navbar/navbar.css
+++ b/client/src/componentes/Navbar/navbar.css
@@ -1,7 +1,8 @@
 .navbar-container {
   width: 100%;
   height: 60px;
-  background-color: rgb(177, 95, 19);
+  /* background-color: rgb(177, 95, 19); */
+  background-color: rgba(52, 73, 94, 0.725);;
   display: flex;
   align-items: center;
   justify-content: center;
