--- a/client/src/componentes/Landing/landing.css
+++ b/client/src/componentes/Landing/landing.css
@@ -1,8 +1,30 @@
+/* body {
+  background-color: red;
+} */
+
 .landing {
-  min-width: 100vh;
-  min-height: 100vh;
-  background: url('../../Imagens/dogs.jpg') no-repeat;
-  background-size: cover;
+  /* min-width: 100vh;
+  min-height: 100vh; */
+  /* background-size: cover; */
+  display: flex;
+  flex-direction: row;
+  /* justify-content: center; */
+  /* background: ;/ */
+  /* background-color: blue; */
+}
+
+.left-box {
+  background-color: rgb(129, 2, 2);
+  width: 100vh;
+  height: 100vh;
+  /* min-width: 100vh; */
+  /* min-height: 100vh; */
+}
+
+.rigth-box {
+  background-color:rgba(52, 73, 94, 0.725);
+  width: 100vh;
+  height: 100vh;
 }
 
 .btn {
@@ -12,6 +34,7 @@
   top: 65%;
   left: 45%;
   background-color: rgb(41, 168, 151);
+  border: 1px orange solid;
   height: 40px;
   width: 10%;
   border-radius: 10px;  
