--- a/client/src/componentes/Cards/breed.css
+++ b/client/src/componentes/Cards/breed.css
@@ -4,11 +4,11 @@
   grid-template-rows: 1fr 1fr;
   grid-column-gap: 5px;
   grid-row-gap: 5px;
-  justify-content: center;
+  justify-content: space-evenly;
   background-size: cover;
   width: auto;
   height: auto;
-  padding: 6px;
+  padding: 3px;
 }
 
 .breedCard {
@@ -20,7 +20,7 @@
   margin-right: 5px;
   margin-left: 5px;
   width: 290px;
-  height: 260px;
+  height: 255px;
   border-radius: 20px;
   border: 3px solid rgb(129, 2, 2);
   box-shadow: 8px 8px 5px 3px rgba(0, 0, 0, 0.301);
