--- a/client/src/componentes/Pagination/pagination.css
+++ b/client/src/componentes/Pagination/pagination.css
@@ -13,7 +13,7 @@
   background-color: rgba(52, 73, 94, 0.725);
   border-radius: 15px;
   padding-inline: 10px;
-  margin-top: 4px;
+  margin-top: 2px;
   margin-bottom: 0px;
 } 
 
@@ -21,7 +21,7 @@
   font-family: fantasy;
   font-size: 18px;
   padding: 6px;
-  margin: 6px;
+  margin: 3px 3px 3px 3px;
   border: 2px outset rgb(129, 2, 2);
   border-radius: 10px;
   cursor: pointer;
