--- a/client/src/componentes/SearchBar/searchBar.css
+++ b/client/src/componentes/SearchBar/searchBar.css
@@ -1,4 +1,4 @@
-.search-box {
+/* .search-box {
   display: flex;
   justify-content: flex-end;
   width: 100%;
@@ -33,4 +33,4 @@
   border-radius: 10px;
   border-color: rgb(54, 59, 50);
   background-color: ghostwhite;
-}
+} */
