--- a/client/src/componentes/Cards/breed.css
+++ b/client/src/componentes/Cards/breed.css
@@ -22,12 +22,12 @@
   width: 290px;
   height: 255px;
   border-radius: 20px;
-  border: 3px solid rgb(129, 2, 2);
+  border: 3px solid rgb(175, 20, 20);
   box-shadow: 8px 8px 5px 3px rgba(0, 0, 0, 0.301);
 }
 
-.breedCard:hover {
-  border: 3px solid #196F3D;
+.breedCard:hover{
+  border-color: #196F3D;
 }
 
 /*nueva carta*/
@@ -37,7 +37,7 @@
   margin: 6px;
   font-family: fantasy;
   font-size: 18px;
-  color: rgb(129, 2, 2);
+  color: rgb(175, 20, 20);
 }
 
 .card-image {
@@ -46,7 +46,7 @@
 }
 
 #breed-imagen {
-  border: 2px outset rgb(129, 2, 2);
+  border: 2px outset rgb(175, 20, 20);
   border-radius: 46%;
 }
 
