--- a/client/src/componentes/Cards/breed.css
+++ b/client/src/componentes/Cards/breed.css
@@ -5,6 +5,7 @@
   grid-column-gap: 5px;
   grid-row-gap: 5px;
   justify-content: space-evenly;
+  justify-items: center;
   background-size: cover;
   width: auto;
   height: auto;
@@ -30,7 +31,6 @@
   border-color: #196F3D;
 }
 
-/*nueva carta*/
 #breed-name {
   display: flex;
   justify-content: center;
@@ -75,37 +75,31 @@
   font-size: 15px;
 }
 
-
-/*nueva carta*/
-
-
-
-
-
-
-/*anterior */
-/* .left{
-  width: 140px;
+.single-card-box {
   display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
+  justify-content: center;
+  width: fit-content
 }
 
-.rigth{
-  width: 140px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
+@media screen and (max-width: 1300px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+    grid-row-gap: 10px;
+    margin-top: 10px;
+  }
 }
 
-.breed-temperamentos {
-  display: flex;
-  flex-direction: column;
-  align-items: center
+@media screen and (max-width: 980px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr;
+  }
 }
 
-#temperamento {
-  margin: 0px;
-} */
+@media screen and (max-width: 665px) {
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 1fr 1fr;
+  }
+}
