--- a/client/src/componentes/Cards/breedNotFound.css
+++ b/client/src/componentes/Cards/breedNotFound.css
@@ -1,6 +1,6 @@
 .breedNotFound-box {
   position: absolute;
-  background: rebeccapurple;
+  background: white;
   width: 99%;
   height: 90%;
   display: flex;
@@ -12,30 +12,173 @@
 }
 
 .searchOrCreate {
-  /* position: absolute; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
   width: 50%;
-  height: 100%;
-  /* right: 600px; */
-  background: rgb(51, 146, 153);
+  /* height: 100%; */
+  border: 10px solid rgb(175, 20, 20);
+  border-radius: 15px;
+  background: rgba(52, 73, 94, 0.725);
 }
 
+.searchOrCreate:hover {
+  cursor: pointer;
+  /* width: 36%; */
+  transform: translateX(0px);
+}
+
+
 .breedNotFound-img {
-  /* position: absolute; */
-  display: flex;
-  align-items: center;
-  width: 10%;
+  /* display: flex;
+  align-items: center; */
+  width: 100%;
   height: 100%;
   /* right: 10px; */
   border: 1px solid orange;
+  /* background-color: rgb(86, 116, 17); */
+  /* position: relative; */
+  /* left: 100px; */
+  /* z-index: 1; */
+  /* opacity: 0.5; */
+  /* visibility: hidden; */
 }
 
-#error404 {
+/*position relative 
+z-indez: 1 para que el texto este por detras
+opacitity para ver
+*/
+
+#breedNotFound-logo {
+  background-color: rebeccapurple;
+  width: 100px;
+  height: 100px;
   text-align: center;
-  background-color: red;
+  mix-blend-mode: multiply;
+  border-radius: 30px;
+  border: 1px solid rebeccapurple;
+}
+
+.secondary-text {
+  text-align: center;
+}
+
+.error404 {
+  /* background-color: red; */
+  color: rgb(175, 20, 20);
   font-family: fantasy;
-  font-size: 48px;
+  font-size: 88px;
+  margin: 20px 0px 0px 0px;
+  padding: 0px;
+}
+
+.error404-sub {
+  font-family: cursive;
+  /* background-color: green; */
+  font-size: 25px;
+  color: goldenrod;
+  margin: -10px 0px 0px 0px;
+}
+
+.create-new-breed {
+  font-family: cursive;
+  color: ghostwhite;
+  font-size: 18px;
+  /* background-color: rgb(126, 138, 126); */
+  margin: 25px 0px 50px 0px;
+}
+
+.error404-buttons {
+  /* background-color: white; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+
+.breed-create-button, .inicio-button {
+  font-family: cursive;
+  font-size: 16px;
+  min-height: 25px;
+  min-width: 15%;
+  color: ghostwhite;
+  background-color: rgb(175, 20, 20);
+  border: 2px solid rgb(175, 20, 20);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.breed-create-button:hover, .inicio-button:hover {
+  color: rgba(52, 73, 94, 0.725);
+  background-color: ghostwhite;
+  border: 2px solid rgba(52, 73, 94, 0.725);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.main-box1 {
+  position: absolute;
+  background: white;
+  min-width: 99%;
+  min-height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row
+}
+
+.secondary-box1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 40%;
+  height: 60%;
+  border: 10px solid rgb(175, 20, 20);
+  border-radius: 15px;
+  background: rgba(52, 73, 94, 0.725);
+}
+
+.text-box1 {
+  /* background-color: rgb(0, 26, 255); */
+  width: 100%;
+  height: 100%;
+}
+
+.img-box1 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  /* background-color: rgb(0, 255, 21); */
+  /* width: 30%; */
+  /* height: 50%; */
 }
